#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-02
2014-09-18 David Schneider
- regenerate for new pdsdata 8.1.3/psddldata with:
  TimeTool::ConfigV1, TimeTool::DataV1, L3T::DataV2, GenericPgp::ConfigV1

Tag: V00-02-01
2014-09-16 David Schneider
- Fix some bugs with mpi based split scan. Not production ready.
- instrument code with macros for printing debug/trace messages.
	
Tag: V00-02-00
2014-09-03 David Schneider
- Introduce mpi based split scan. Adds dependency on openmpi.
- Some cleanup/refactoring. Make some H5Output functionality public
  so it can be accessed from H5MpiTranslateApp	

Tag: V00-01-30
2014-08-06 David Schneider
- adjust unit tests to use $SIT_ROOT environment variable to 
  construct path to test data

Tag: V00-01-29
2014-07-18 David Schneider
- add hack to address src alias from s80 and DAQ mapping to same group
  trac ticket:318 (see also trac ticket:279)

Tag: V00-01-28
2014-07-18 David Schneider
- fix issue with event data appearing in both beginCalib and event.
  trac ticket:317

Tag: V00-01-27
2014-07-17 David Schneider
- Move h5 file closing from destructor to endJob. Address trac ticket #316
- Move initialization into beginJob
- Clarify documentation for calibration filtering

Tag: V00-01-26
2014-07-16 David Schneider
- Protect against distinct configStore keys that map to the same hdf5 path.
  Such distinct keys should be for duplicate data, see
  https://pswww.slac.stanford.edu/trac/psdm/ticket/279#comment:16

Tag: V00-01-25
2014-07-10 David Schneider
- Adjust unit test for new version of numpy
  address warning on rhel6

Tag: V00-01-24
2014-07-09 David Schneider