@@ -11,6 +11,12 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-03
+2014-09-24 David Schneider
+- add option Translator.H5Output.printenv for h5-mpi-translate to print environment
+- adjust trace/debug printout, adjust time reporting
+- have mpi unit tests clean up after themselves
+	
 Tag: V00-02-02
 2014-09-18 David Schneider
 - regenerate for new pdsdata 8.1.3/psddldata with:
